--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint"
+    "precommit": "npm run lint",
+    "offline": "serverless offline start",
+    "deploy": "npm run build && serverless deploy"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.0.0",
+    "aws-serverless-express": "^3.3.5",
+    "bcryptjs": "^2.4.3",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
-    "@nuxtjs/axios": "^5.0.0"
+    "mongoose": "^5.4.3",
+    "nuxt": "^2.0.0",
+    "serverless-apigw-binary": "^0.4.4",
+    "serverless-http": "^1.8.0",
+    "serverless-offline": "^3.32.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0",
